syntax = "proto3";

enum my_enum {
  ZERO = 0;
  ONE = 1;
  TWO = 2;
}

message Test {
  int32 camelCase = 1;
  my_enum snake_case = 2;
  snake_case_message snake_case_message = 3;
}

message snake_case_message {

}